...
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:srcCompat="@android:drawable/ic_dialog_email" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        android:id="@+id/listItems"
        android:layout_height="wrap_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
